samples/_failures_safe/1761629935_6fb53d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1300ab6a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_1300ab6a.c:156:5: error: expected expression at end of input
  156 |     for (
      |     ^~~
./samples/SAFE/__tmp_1300ab6a.c:156:5: error: expected declaration or statement at end of input
